// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`picker captures threshold, filtering, scroll and observed preview completion: 75 single column 1`] = `
"<accent+bg:customMessageBg>╭─────────────────────────────────────────────────────────────────────────╮</accent+bg:customMessageBg>
<accent+bg:customMessageBg>│</accent+bg:customMessageBg><bg:customMessageBg> </bg:customMessageBg><accent+bg:customMessageBg+bold>  Find files & folders</accent+bg:customMessageBg+bold><text+bg:customMessageBg>  </text+bg:customMessageBg><muted+bg:customMessageBg>3 matches</muted+bg:customMessageBg><text+bg:customMessageBg>                                       </text+bg:customMessageBg><accent+bg:customMessageBg>│</accent+bg:customMessageBg>
<accent+bg:customMessageBg>│</accent+bg:customMessageBg><bg:customMessageBg> </bg:customMessageBg><text+bg:customMessageBg>                                                                        </text+bg:customMessageBg><accent+bg:customMessageBg>│</accent+bg:customMessageBg>
<accent+bg:customMessageBg>│</accent+bg:customMessageBg><bg:customMessageBg> </bg:customMessageBg><accent+bg:customMessageBg>❯</accent+bg:customMessageBg><text+bg:customMessageBg> </text+bg:customMessageBg><muted+bg:customMessageBg>type to filter…</muted+bg:customMessageBg><text+bg:customMessageBg>                                                       </text+bg:customMessageBg><accent+bg:customMessageBg>│</accent+bg:customMessageBg>
<accent+bg:customMessageBg>│</accent+bg:customMessageBg><bg:customMessageBg> </bg:customMessageBg><text+bg:customMessageBg>                                                                        </text+bg:customMessageBg><accent+bg:customMessageBg>│</accent+bg:customMessageBg>
<accent+bg:customMessageBg>│</accent+bg:customMessageBg><bg:customMessageBg> </bg:customMessageBg><accent+bg:customMessageBg>›</accent+bg:customMessageBg><text+bg:customMessageBg> </text+bg:customMessageBg><accent+bg:customMessageBg></accent+bg:customMessageBg><text+bg:customMessageBg> </text+bg:customMessageBg><accent+bg:customMessageBg>src/</accent+bg:customMessageBg><text+bg:customMessageBg>                                                                </text+bg:customMessageBg><accent+bg:customMessageBg>│</accent+bg:customMessageBg>
<accent+bg:customMessageBg>│</accent+bg:customMessageBg><bg:customMessageBg> </bg:customMessageBg><text+bg:customMessageBg>  </text+bg:customMessageBg><syntaxType+bg:customMessageBg></syntaxType+bg:customMessageBg><text+bg:customMessageBg> </text+bg:customMessageBg><dim+bg:customMessageBg>a.ts</dim+bg:customMessageBg><text+bg:customMessageBg> </text+bg:customMessageBg><muted+bg:customMessageBg>src/</muted+bg:customMessageBg><text+bg:customMessageBg>                                                           </text+bg:customMessageBg><accent+bg:customMessageBg>│</accent+bg:customMessageBg>
<accent+bg:customMessageBg>│</accent+bg:customMessageBg><bg:customMessageBg> </bg:customMessageBg><text+bg:customMessageBg>  </text+bg:customMessageBg><syntaxType+bg:customMessageBg></syntaxType+bg:customMessageBg><text+bg:customMessageBg> </text+bg:customMessageBg><dim+bg:customMessageBg>b.ts</dim+bg:customMessageBg><text+bg:customMessageBg> </text+bg:customMessageBg><muted+bg:customMessageBg>src/deep/</muted+bg:customMessageBg><text+bg:customMessageBg>                                                      </text+bg:customMessageBg><accent+bg:customMessageBg>│</accent+bg:customMessageBg>
<accent+bg:customMessageBg>│</accent+bg:customMessageBg><bg:customMessageBg> </bg:customMessageBg><text+bg:customMessageBg>                                                                        </text+bg:customMessageBg><accent+bg:customMessageBg>│</accent+bg:customMessageBg>
<accent+bg:customMessageBg>│</accent+bg:customMessageBg><bg:customMessageBg> </bg:customMessageBg><muted+bg:customMessageBg>↑↓ move · ⏎ insert · esc cancel</muted+bg:customMessageBg><text+bg:customMessageBg>                                         </text+bg:customMessageBg><accent+bg:customMessageBg>│</accent+bg:customMessageBg>
<accent+bg:customMessageBg>╰─────────────────────────────────────────────────────────────────────────╯</accent+bg:customMessageBg>"
`;

exports[`picker captures threshold, filtering, scroll and observed preview completion: 76 directory preview 1`] = `
"<accent+bg:customMessageBg>╭──────────────────────────────────────────────────────────────────────────╮</accent+bg:customMessageBg>
<accent+bg:customMessageBg>│</accent+bg:customMessageBg><bg:customMessageBg> </bg:customMessageBg><accent+bg:customMessageBg+bold>  Find files & folders</accent+bg:customMessageBg+bold><text+bg:customMessageBg>  </text+bg:customMessageBg><muted+bg:customMessageBg>3 matches</muted+bg:customMessageBg><text+bg:customMessageBg>                                        </text+bg:customMessageBg><accent+bg:customMessageBg>│</accent+bg:customMessageBg>
<accent+bg:customMessageBg>│</accent+bg:customMessageBg><bg:customMessageBg> </bg:customMessageBg><text+bg:customMessageBg>                                                                         </text+bg:customMessageBg><accent+bg:customMessageBg>│</accent+bg:customMessageBg>
<accent+bg:customMessageBg>│</accent+bg:customMessageBg><bg:customMessageBg> </bg:customMessageBg><accent+bg:customMessageBg>❯</accent+bg:customMessageBg><text+bg:customMessageBg> </text+bg:customMessageBg><muted+bg:customMessageBg>type to filter…</muted+bg:customMessageBg><text+bg:customMessageBg>                                                        </text+bg:customMessageBg><accent+bg:customMessageBg>│</accent+bg:customMessageBg>
<accent+bg:customMessageBg>│</accent+bg:customMessageBg><bg:customMessageBg> </bg:customMessageBg><text+bg:customMessageBg>                                                                         </text+bg:customMessageBg><accent+bg:customMessageBg>│</accent+bg:customMessageBg>
<accent+bg:customMessageBg>│</accent+bg:customMessageBg><bg:customMessageBg> </bg:customMessageBg><accent+bg:customMessageBg>›</accent+bg:customMessageBg><text+bg:customMessageBg> </text+bg:customMessageBg><accent+bg:customMessageBg></accent+bg:customMessageBg><text+bg:customMessageBg> </text+bg:customMessageBg><accent+bg:customMessageBg>src/</accent+bg:customMessageBg><text+bg:customMessageBg>                          </text+bg:customMessageBg><muted+bg:customMessageBg>src/ · contents</muted+bg:customMessageBg><text+bg:customMessageBg>                        </text+bg:customMessageBg><accent+bg:customMessageBg>│</accent+bg:customMessageBg>
<accent+bg:customMessageBg>│</accent+bg:customMessageBg><bg:customMessageBg> </bg:customMessageBg><text+bg:customMessageBg>  </text+bg:customMessageBg><syntaxType+bg:customMessageBg></syntaxType+bg:customMessageBg><text+bg:customMessageBg> </text+bg:customMessageBg><dim+bg:customMessageBg>a.ts</dim+bg:customMessageBg><text+bg:customMessageBg> </text+bg:customMessageBg><muted+bg:customMessageBg>src/</muted+bg:customMessageBg><text+bg:customMessageBg>                     </text+bg:customMessageBg><border+bg:customMessageBg>──────────────────────────────────────</border+bg:customMessageBg><text+bg:customMessageBg> </text+bg:customMessageBg><accent+bg:customMessageBg>│</accent+bg:customMessageBg>
<accent+bg:customMessageBg>│</accent+bg:customMessageBg><bg:customMessageBg> </bg:customMessageBg><text+bg:customMessageBg>  </text+bg:customMessageBg><syntaxType+bg:customMessageBg></syntaxType+bg:customMessageBg><text+bg:customMessageBg> </text+bg:customMessageBg><dim+bg:customMessageBg>b.ts</dim+bg:customMessageBg><text+bg:customMessageBg> </text+bg:customMessageBg><muted+bg:customMessageBg>src/deep/</muted+bg:customMessageBg><text+bg:customMessageBg>                </text+bg:customMessageBg><syntaxType+bg:customMessageBg></syntaxType+bg:customMessageBg><text+bg:customMessageBg> </text+bg:customMessageBg><syntaxType+bg:customMessageBg>a.ts</syntaxType+bg:customMessageBg><text+bg:customMessageBg>                                 </text+bg:customMessageBg><accent+bg:customMessageBg>│</accent+bg:customMessageBg>
<accent+bg:customMessageBg>│</accent+bg:customMessageBg><bg:customMessageBg> </bg:customMessageBg><text+bg:customMessageBg>                                  </text+bg:customMessageBg><accent+bg:customMessageBg></accent+bg:customMessageBg><text+bg:customMessageBg> </text+bg:customMessageBg><accent+bg:customMessageBg>deep/</accent+bg:customMessageBg><text+bg:customMessageBg>                                </text+bg:customMessageBg><accent+bg:customMessageBg>│</accent+bg:customMessageBg>
<accent+bg:customMessageBg>│</accent+bg:customMessageBg><bg:customMessageBg> </bg:customMessageBg><text+bg:customMessageBg>                                                                         </text+bg:customMessageBg><accent+bg:customMessageBg>│</accent+bg:customMessageBg>
<accent+bg:customMessageBg>│</accent+bg:customMessageBg><bg:customMessageBg> </bg:customMessageBg><muted+bg:customMessageBg>↑↓ move · ⏎ insert · esc cancel</muted+bg:customMessageBg><text+bg:customMessageBg>                                          </text+bg:customMessageBg><accent+bg:customMessageBg>│</accent+bg:customMessageBg>
<accent+bg:customMessageBg>╰──────────────────────────────────────────────────────────────────────────╯</accent+bg:customMessageBg>"
`;

exports[`picker captures threshold, filtering, scroll and observed preview completion: filtered spaces 1`] = `
"<accent+bg:customMessageBg>╭──────────────────────────────────────────────╮</accent+bg:customMessageBg>
<accent+bg:customMessageBg>│</accent+bg:customMessageBg><bg:customMessageBg> </bg:customMessageBg><accent+bg:customMessageBg+bold>  Find files & folders</accent+bg:customMessageBg+bold><text+bg:customMessageBg>  </text+bg:customMessageBg><muted+bg:customMessageBg>2 matches</muted+bg:customMessageBg><text+bg:customMessageBg>            </text+bg:customMessageBg><accent+bg:customMessageBg>│</accent+bg:customMessageBg>
<accent+bg:customMessageBg>│</accent+bg:customMessageBg><bg:customMessageBg> </bg:customMessageBg><text+bg:customMessageBg>                                             </text+bg:customMessageBg><accent+bg:customMessageBg>│</accent+bg:customMessageBg>
<accent+bg:customMessageBg>│</accent+bg:customMessageBg><bg:customMessageBg> </bg:customMessageBg><accent+bg:customMessageBg>❯</accent+bg:customMessageBg><text+bg:customMessageBg> a b                                        </text+bg:customMessageBg><accent+bg:customMessageBg>│</accent+bg:customMessageBg>
<accent+bg:customMessageBg>│</accent+bg:customMessageBg><bg:customMessageBg> </bg:customMessageBg><text+bg:customMessageBg>                                             </text+bg:customMessageBg><accent+bg:customMessageBg>│</accent+bg:customMessageBg>
<accent+bg:customMessageBg>│</accent+bg:customMessageBg><bg:customMessageBg> </bg:customMessageBg><accent+bg:customMessageBg>›</accent+bg:customMessageBg><text+bg:customMessageBg> </text+bg:customMessageBg><accent+bg:customMessageBg></accent+bg:customMessageBg><text+bg:customMessageBg> </text+bg:customMessageBg><accent+bg:customMessageBg>a b/</accent+bg:customMessageBg><text+bg:customMessageBg>                                     </text+bg:customMessageBg><accent+bg:customMessageBg>│</accent+bg:customMessageBg>
<accent+bg:customMessageBg>│</accent+bg:customMessageBg><bg:customMessageBg> </bg:customMessageBg><text+bg:customMessageBg>  </text+bg:customMessageBg><syntaxType+bg:customMessageBg></syntaxType+bg:customMessageBg><text+bg:customMessageBg> </text+bg:customMessageBg><dim+bg:customMessageBg>a.ts</dim+bg:customMessageBg><text+bg:customMessageBg> </text+bg:customMessageBg><muted+bg:customMessageBg>a b/</muted+bg:customMessageBg><text+bg:customMessageBg>                                </text+bg:customMessageBg><accent+bg:customMessageBg>│</accent+bg:customMessageBg>
<accent+bg:customMessageBg>│</accent+bg:customMessageBg><bg:customMessageBg> </bg:customMessageBg><text+bg:customMessageBg>                                             </text+bg:customMessageBg><accent+bg:customMessageBg>│</accent+bg:customMessageBg>
<accent+bg:customMessageBg>│</accent+bg:customMessageBg><bg:customMessageBg> </bg:customMessageBg><muted+bg:customMessageBg>↑↓ move · ⏎ insert · esc cancel</muted+bg:customMessageBg><text+bg:customMessageBg>              </text+bg:customMessageBg><accent+bg:customMessageBg>│</accent+bg:customMessageBg>
<accent+bg:customMessageBg>╰──────────────────────────────────────────────╯</accent+bg:customMessageBg>"
`;

exports[`picker captures threshold, filtering, scroll and observed preview completion: no matches 1`] = `
"<accent+bg:customMessageBg>╭──────────────────────────────────────────────╮</accent+bg:customMessageBg>
<accent+bg:customMessageBg>│</accent+bg:customMessageBg><bg:customMessageBg> </bg:customMessageBg><accent+bg:customMessageBg+bold>  Find files & folders</accent+bg:customMessageBg+bold><text+bg:customMessageBg>  </text+bg:customMessageBg><muted+bg:customMessageBg>0 matches</muted+bg:customMessageBg><text+bg:customMessageBg>            </text+bg:customMessageBg><accent+bg:customMessageBg>│</accent+bg:customMessageBg>
<accent+bg:customMessageBg>│</accent+bg:customMessageBg><bg:customMessageBg> </bg:customMessageBg><text+bg:customMessageBg>                                             </text+bg:customMessageBg><accent+bg:customMessageBg>│</accent+bg:customMessageBg>
<accent+bg:customMessageBg>│</accent+bg:customMessageBg><bg:customMessageBg> </bg:customMessageBg><accent+bg:customMessageBg>❯</accent+bg:customMessageBg><text+bg:customMessageBg> a z                                        </text+bg:customMessageBg><accent+bg:customMessageBg>│</accent+bg:customMessageBg>
<accent+bg:customMessageBg>│</accent+bg:customMessageBg><bg:customMessageBg> </bg:customMessageBg><text+bg:customMessageBg>                                             </text+bg:customMessageBg><accent+bg:customMessageBg>│</accent+bg:customMessageBg>
<accent+bg:customMessageBg>│</accent+bg:customMessageBg><bg:customMessageBg> </bg:customMessageBg><muted+bg:customMessageBg>  no matching files</muted+bg:customMessageBg><text+bg:customMessageBg>                          </text+bg:customMessageBg><accent+bg:customMessageBg>│</accent+bg:customMessageBg>
<accent+bg:customMessageBg>│</accent+bg:customMessageBg><bg:customMessageBg> </bg:customMessageBg><text+bg:customMessageBg>                                             </text+bg:customMessageBg><accent+bg:customMessageBg>│</accent+bg:customMessageBg>
<accent+bg:customMessageBg>│</accent+bg:customMessageBg><bg:customMessageBg> </bg:customMessageBg><muted+bg:customMessageBg>↑↓ move · ⏎ insert · esc cancel</muted+bg:customMessageBg><text+bg:customMessageBg>              </text+bg:customMessageBg><accent+bg:customMessageBg>│</accent+bg:customMessageBg>
<accent+bg:customMessageBg>╰──────────────────────────────────────────────╯</accent+bg:customMessageBg>"
`;

exports[`picker captures threshold, filtering, scroll and observed preview completion: empty candidates 1`] = `
"<accent+bg:customMessageBg>╭──────────────────────────────────────────────╮</accent+bg:customMessageBg>
<accent+bg:customMessageBg>│</accent+bg:customMessageBg><bg:customMessageBg> </bg:customMessageBg><accent+bg:customMessageBg+bold>  Find files & folders</accent+bg:customMessageBg+bold><text+bg:customMessageBg>  </text+bg:customMessageBg><muted+bg:customMessageBg>0 matches</muted+bg:customMessageBg><text+bg:customMessageBg>            </text+bg:customMessageBg><accent+bg:customMessageBg>│</accent+bg:customMessageBg>
<accent+bg:customMessageBg>│</accent+bg:customMessageBg><bg:customMessageBg> </bg:customMessageBg><text+bg:customMessageBg>                                             </text+bg:customMessageBg><accent+bg:customMessageBg>│</accent+bg:customMessageBg>
<accent+bg:customMessageBg>│</accent+bg:customMessageBg><bg:customMessageBg> </bg:customMessageBg><accent+bg:customMessageBg>❯</accent+bg:customMessageBg><text+bg:customMessageBg> </text+bg:customMessageBg><muted+bg:customMessageBg>type to filter…</muted+bg:customMessageBg><text+bg:customMessageBg>                            </text+bg:customMessageBg><accent+bg:customMessageBg>│</accent+bg:customMessageBg>
<accent+bg:customMessageBg>│</accent+bg:customMessageBg><bg:customMessageBg> </bg:customMessageBg><text+bg:customMessageBg>                                             </text+bg:customMessageBg><accent+bg:customMessageBg>│</accent+bg:customMessageBg>
<accent+bg:customMessageBg>│</accent+bg:customMessageBg><bg:customMessageBg> </bg:customMessageBg><muted+bg:customMessageBg>  no matching files</muted+bg:customMessageBg><text+bg:customMessageBg>                          </text+bg:customMessageBg><accent+bg:customMessageBg>│</accent+bg:customMessageBg>
<accent+bg:customMessageBg>│</accent+bg:customMessageBg><bg:customMessageBg> </bg:customMessageBg><text+bg:customMessageBg>                                             </text+bg:customMessageBg><accent+bg:customMessageBg>│</accent+bg:customMessageBg>
<accent+bg:customMessageBg>│</accent+bg:customMessageBg><bg:customMessageBg> </bg:customMessageBg><muted+bg:customMessageBg>↑↓ move · ⏎ insert · esc cancel</muted+bg:customMessageBg><text+bg:customMessageBg>              </text+bg:customMessageBg><accent+bg:customMessageBg>│</accent+bg:customMessageBg>
<accent+bg:customMessageBg>╰──────────────────────────────────────────────╯</accent+bg:customMessageBg>"
`;

exports[`picker captures threshold, filtering, scroll and observed preview completion: scrolled 1`] = `
"<accent+bg:customMessageBg>╭──────────────────────────────────────────────╮</accent+bg:customMessageBg>
<accent+bg:customMessageBg>│</accent+bg:customMessageBg><bg:customMessageBg> </bg:customMessageBg><accent+bg:customMessageBg+bold>  Find files & folders</accent+bg:customMessageBg+bold><text+bg:customMessageBg>  </text+bg:customMessageBg><muted+bg:customMessageBg>12 matches</muted+bg:customMessageBg><text+bg:customMessageBg>           </text+bg:customMessageBg><accent+bg:customMessageBg>│</accent+bg:customMessageBg>
<accent+bg:customMessageBg>│</accent+bg:customMessageBg><bg:customMessageBg> </bg:customMessageBg><text+bg:customMessageBg>                                             </text+bg:customMessageBg><accent+bg:customMessageBg>│</accent+bg:customMessageBg>
<accent+bg:customMessageBg>│</accent+bg:customMessageBg><bg:customMessageBg> </bg:customMessageBg><accent+bg:customMessageBg>❯</accent+bg:customMessageBg><text+bg:customMessageBg> </text+bg:customMessageBg><muted+bg:customMessageBg>type to filter…</muted+bg:customMessageBg><text+bg:customMessageBg>                            </text+bg:customMessageBg><accent+bg:customMessageBg>│</accent+bg:customMessageBg>
<accent+bg:customMessageBg>│</accent+bg:customMessageBg><bg:customMessageBg> </bg:customMessageBg><text+bg:customMessageBg>                                             </text+bg:customMessageBg><accent+bg:customMessageBg>│</accent+bg:customMessageBg>
<accent+bg:customMessageBg>│</accent+bg:customMessageBg><bg:customMessageBg> </bg:customMessageBg><text+bg:customMessageBg>  </text+bg:customMessageBg><syntaxType+bg:customMessageBg></syntaxType+bg:customMessageBg><text+bg:customMessageBg> </text+bg:customMessageBg><dim+bg:customMessageBg>f02.ts</dim+bg:customMessageBg><text+bg:customMessageBg>                                   </text+bg:customMessageBg><accent+bg:customMessageBg>│</accent+bg:customMessageBg>
<accent+bg:customMessageBg>│</accent+bg:customMessageBg><bg:customMessageBg> </bg:customMessageBg><text+bg:customMessageBg>  </text+bg:customMessageBg><syntaxType+bg:customMessageBg></syntaxType+bg:customMessageBg><text+bg:customMessageBg> </text+bg:customMessageBg><dim+bg:customMessageBg>f03.ts</dim+bg:customMessageBg><text+bg:customMessageBg>                                   </text+bg:customMessageBg><accent+bg:customMessageBg>│</accent+bg:customMessageBg>
<accent+bg:customMessageBg>│</accent+bg:customMessageBg><bg:customMessageBg> </bg:customMessageBg><text+bg:customMessageBg>  </text+bg:customMessageBg><syntaxType+bg:customMessageBg></syntaxType+bg:customMessageBg><text+bg:customMessageBg> </text+bg:customMessageBg><dim+bg:customMessageBg>f04.ts</dim+bg:customMessageBg><text+bg:customMessageBg>                                   </text+bg:customMessageBg><accent+bg:customMessageBg>│</accent+bg:customMessageBg>
<accent+bg:customMessageBg>│</accent+bg:customMessageBg><bg:customMessageBg> </bg:customMessageBg><text+bg:customMessageBg>  </text+bg:customMessageBg><syntaxType+bg:customMessageBg></syntaxType+bg:customMessageBg><text+bg:customMessageBg> </text+bg:customMessageBg><dim+bg:customMessageBg>f05.ts</dim+bg:customMessageBg><text+bg:customMessageBg>                                   </text+bg:customMessageBg><accent+bg:customMessageBg>│</accent+bg:customMessageBg>
<accent+bg:customMessageBg>│</accent+bg:customMessageBg><bg:customMessageBg> </bg:customMessageBg><text+bg:customMessageBg>  </text+bg:customMessageBg><syntaxType+bg:customMessageBg></syntaxType+bg:customMessageBg><text+bg:customMessageBg> </text+bg:customMessageBg><dim+bg:customMessageBg>f06.ts</dim+bg:customMessageBg><text+bg:customMessageBg>                                   </text+bg:customMessageBg><accent+bg:customMessageBg>│</accent+bg:customMessageBg>
<accent+bg:customMessageBg>│</accent+bg:customMessageBg><bg:customMessageBg> </bg:customMessageBg><text+bg:customMessageBg>  </text+bg:customMessageBg><syntaxType+bg:customMessageBg></syntaxType+bg:customMessageBg><text+bg:customMessageBg> </text+bg:customMessageBg><dim+bg:customMessageBg>f07.ts</dim+bg:customMessageBg><text+bg:customMessageBg>                                   </text+bg:customMessageBg><accent+bg:customMessageBg>│</accent+bg:customMessageBg>
<accent+bg:customMessageBg>│</accent+bg:customMessageBg><bg:customMessageBg> </bg:customMessageBg><text+bg:customMessageBg>  </text+bg:customMessageBg><syntaxType+bg:customMessageBg></syntaxType+bg:customMessageBg><text+bg:customMessageBg> </text+bg:customMessageBg><dim+bg:customMessageBg>f08.ts</dim+bg:customMessageBg><text+bg:customMessageBg>                                   </text+bg:customMessageBg><accent+bg:customMessageBg>│</accent+bg:customMessageBg>
<accent+bg:customMessageBg>│</accent+bg:customMessageBg><bg:customMessageBg> </bg:customMessageBg><text+bg:customMessageBg>  </text+bg:customMessageBg><syntaxType+bg:customMessageBg></syntaxType+bg:customMessageBg><text+bg:customMessageBg> </text+bg:customMessageBg><dim+bg:customMessageBg>f09.ts</dim+bg:customMessageBg><text+bg:customMessageBg>                                   </text+bg:customMessageBg><accent+bg:customMessageBg>│</accent+bg:customMessageBg>
<accent+bg:customMessageBg>│</accent+bg:customMessageBg><bg:customMessageBg> </bg:customMessageBg><text+bg:customMessageBg>  </text+bg:customMessageBg><syntaxType+bg:customMessageBg></syntaxType+bg:customMessageBg><text+bg:customMessageBg> </text+bg:customMessageBg><dim+bg:customMessageBg>f10.ts</dim+bg:customMessageBg><text+bg:customMessageBg>                                   </text+bg:customMessageBg><accent+bg:customMessageBg>│</accent+bg:customMessageBg>
<accent+bg:customMessageBg>│</accent+bg:customMessageBg><bg:customMessageBg> </bg:customMessageBg><accent+bg:customMessageBg>›</accent+bg:customMessageBg><text+bg:customMessageBg> </text+bg:customMessageBg><syntaxType+bg:customMessageBg></syntaxType+bg:customMessageBg><text+bg:customMessageBg> </text+bg:customMessageBg><syntaxType+bg:customMessageBg>f11.ts</syntaxType+bg:customMessageBg><text+bg:customMessageBg>                                   </text+bg:customMessageBg><accent+bg:customMessageBg>│</accent+bg:customMessageBg>
<accent+bg:customMessageBg>│</accent+bg:customMessageBg><bg:customMessageBg> </bg:customMessageBg><text+bg:customMessageBg>                                             </text+bg:customMessageBg><accent+bg:customMessageBg>│</accent+bg:customMessageBg>
<accent+bg:customMessageBg>│</accent+bg:customMessageBg><bg:customMessageBg> </bg:customMessageBg><muted+bg:customMessageBg>↑↓ move · ⏎ insert · esc cancel</muted+bg:customMessageBg><text+bg:customMessageBg>              </text+bg:customMessageBg><accent+bg:customMessageBg>│</accent+bg:customMessageBg>
<accent+bg:customMessageBg>╰──────────────────────────────────────────────╯</accent+bg:customMessageBg>"
`;

exports[`picker captures threshold, filtering, scroll and observed preview completion: plain preview 1`] = `
"<accent+bg:customMessageBg>╭──────────────────────────────────────────────────────────────────────────╮</accent+bg:customMessageBg>
<accent+bg:customMessageBg>│</accent+bg:customMessageBg><bg:customMessageBg> </bg:customMessageBg><accent+bg:customMessageBg+bold>  Find files & folders</accent+bg:customMessageBg+bold><text+bg:customMessageBg>  </text+bg:customMessageBg><muted+bg:customMessageBg>1 match</muted+bg:customMessageBg><text+bg:customMessageBg>                                          </text+bg:customMessageBg><accent+bg:customMessageBg>│</accent+bg:customMessageBg>
<accent+bg:customMessageBg>│</accent+bg:customMessageBg><bg:customMessageBg> </bg:customMessageBg><text+bg:customMessageBg>                                                                         </text+bg:customMessageBg><accent+bg:customMessageBg>│</accent+bg:customMessageBg>
<accent+bg:customMessageBg>│</accent+bg:customMessageBg><bg:customMessageBg> </bg:customMessageBg><accent+bg:customMessageBg>❯</accent+bg:customMessageBg><text+bg:customMessageBg> </text+bg:customMessageBg><muted+bg:customMessageBg>type to filter…</muted+bg:customMessageBg><text+bg:customMessageBg>                                                        </text+bg:customMessageBg><accent+bg:customMessageBg>│</accent+bg:customMessageBg>
<accent+bg:customMessageBg>│</accent+bg:customMessageBg><bg:customMessageBg> </bg:customMessageBg><text+bg:customMessageBg>                                                                         </text+bg:customMessageBg><accent+bg:customMessageBg>│</accent+bg:customMessageBg>
<accent+bg:customMessageBg>│</accent+bg:customMessageBg><bg:customMessageBg> </bg:customMessageBg><accent+bg:customMessageBg>›</accent+bg:customMessageBg><text+bg:customMessageBg> </text+bg:customMessageBg><syntaxType+bg:customMessageBg></syntaxType+bg:customMessageBg><text+bg:customMessageBg> </text+bg:customMessageBg><syntaxType+bg:customMessageBg>sample.ts</syntaxType+bg:customMessageBg><text+bg:customMessageBg>                     </text+bg:customMessageBg><muted+bg:customMessageBg>sample.ts</muted+bg:customMessageBg><text+bg:customMessageBg>                              </text+bg:customMessageBg><accent+bg:customMessageBg>│</accent+bg:customMessageBg>
<accent+bg:customMessageBg>│</accent+bg:customMessageBg><bg:customMessageBg> </bg:customMessageBg><text+bg:customMessageBg>                                  </text+bg:customMessageBg><border+bg:customMessageBg>──────────────────────────────────────</border+bg:customMessageBg><text+bg:customMessageBg> </text+bg:customMessageBg><accent+bg:customMessageBg>│</accent+bg:customMessageBg>
<accent+bg:customMessageBg>│</accent+bg:customMessageBg><bg:customMessageBg> </bg:customMessageBg><text+bg:customMessageBg>                                  const count = 2;                       </text+bg:customMessageBg><accent+bg:customMessageBg>│</accent+bg:customMessageBg>
<accent+bg:customMessageBg>│</accent+bg:customMessageBg><bg:customMessageBg> </bg:customMessageBg><text+bg:customMessageBg>                                    // fixed preview                     </text+bg:customMessageBg><accent+bg:customMessageBg>│</accent+bg:customMessageBg>
<accent+bg:customMessageBg>│</accent+bg:customMessageBg><bg:customMessageBg> </bg:customMessageBg><text+bg:customMessageBg>                                                                         </text+bg:customMessageBg><accent+bg:customMessageBg>│</accent+bg:customMessageBg>
<accent+bg:customMessageBg>│</accent+bg:customMessageBg><bg:customMessageBg> </bg:customMessageBg><text+bg:customMessageBg>                                                                         </text+bg:customMessageBg><accent+bg:customMessageBg>│</accent+bg:customMessageBg>
<accent+bg:customMessageBg>│</accent+bg:customMessageBg><bg:customMessageBg> </bg:customMessageBg><muted+bg:customMessageBg>↑↓ move · ⏎ insert · esc cancel</muted+bg:customMessageBg><text+bg:customMessageBg>                                          </text+bg:customMessageBg><accent+bg:customMessageBg>│</accent+bg:customMessageBg>
<accent+bg:customMessageBg>╰──────────────────────────────────────────────────────────────────────────╯</accent+bg:customMessageBg>"
`;

exports[`picker captures threshold, filtering, scroll and observed preview completion: highlighted preview 1`] = `
"<accent+bg:customMessageBg>╭──────────────────────────────────────────────────────────────────────────╮</accent+bg:customMessageBg>
<accent+bg:customMessageBg>│</accent+bg:customMessageBg><bg:customMessageBg> </bg:customMessageBg><accent+bg:customMessageBg+bold>  Find files & folders</accent+bg:customMessageBg+bold><text+bg:customMessageBg>  </text+bg:customMessageBg><muted+bg:customMessageBg>1 match</muted+bg:customMessageBg><text+bg:customMessageBg>                                          </text+bg:customMessageBg><accent+bg:customMessageBg>│</accent+bg:customMessageBg>
<accent+bg:customMessageBg>│</accent+bg:customMessageBg><bg:customMessageBg> </bg:customMessageBg><text+bg:customMessageBg>                                                                         </text+bg:customMessageBg><accent+bg:customMessageBg>│</accent+bg:customMessageBg>
<accent+bg:customMessageBg>│</accent+bg:customMessageBg><bg:customMessageBg> </bg:customMessageBg><accent+bg:customMessageBg>❯</accent+bg:customMessageBg><text+bg:customMessageBg> </text+bg:customMessageBg><muted+bg:customMessageBg>type to filter…</muted+bg:customMessageBg><text+bg:customMessageBg>                                                        </text+bg:customMessageBg><accent+bg:customMessageBg>│</accent+bg:customMessageBg>
<accent+bg:customMessageBg>│</accent+bg:customMessageBg><bg:customMessageBg> </bg:customMessageBg><text+bg:customMessageBg>                                                                         </text+bg:customMessageBg><accent+bg:customMessageBg>│</accent+bg:customMessageBg>
<accent+bg:customMessageBg>│</accent+bg:customMessageBg><bg:customMessageBg> </bg:customMessageBg><accent+bg:customMessageBg>›</accent+bg:customMessageBg><text+bg:customMessageBg> </text+bg:customMessageBg><syntaxType+bg:customMessageBg></syntaxType+bg:customMessageBg><text+bg:customMessageBg> </text+bg:customMessageBg><syntaxType+bg:customMessageBg>sample.ts</syntaxType+bg:customMessageBg><text+bg:customMessageBg>                     </text+bg:customMessageBg><muted+bg:customMessageBg>sample.ts</muted+bg:customMessageBg><text+bg:customMessageBg>                              </text+bg:customMessageBg><accent+bg:customMessageBg>│</accent+bg:customMessageBg>
<accent+bg:customMessageBg>│</accent+bg:customMessageBg><bg:customMessageBg> </bg:customMessageBg><text+bg:customMessageBg>                                  </text+bg:customMessageBg><border+bg:customMessageBg>──────────────────────────────────────</border+bg:customMessageBg><text+bg:customMessageBg> </text+bg:customMessageBg><accent+bg:customMessageBg>│</accent+bg:customMessageBg>
<accent+bg:customMessageBg>│</accent+bg:customMessageBg><bg:customMessageBg> </bg:customMessageBg><text+bg:customMessageBg>                                  </text+bg:customMessageBg><syntaxKeyword+bg:customMessageBg>const</syntaxKeyword+bg:customMessageBg><text+bg:customMessageBg> count = </text+bg:customMessageBg><syntaxNumber+bg:customMessageBg>2</syntaxNumber+bg:customMessageBg><text+bg:customMessageBg>;                       </text+bg:customMessageBg><accent+bg:customMessageBg>│</accent+bg:customMessageBg>
<accent+bg:customMessageBg>│</accent+bg:customMessageBg><bg:customMessageBg> </bg:customMessageBg><text+bg:customMessageBg>                                    </text+bg:customMessageBg><syntaxComment+bg:customMessageBg>// fixed preview</syntaxComment+bg:customMessageBg><text+bg:customMessageBg>                     </text+bg:customMessageBg><accent+bg:customMessageBg>│</accent+bg:customMessageBg>
<accent+bg:customMessageBg>│</accent+bg:customMessageBg><bg:customMessageBg> </bg:customMessageBg><text+bg:customMessageBg>                                                                         </text+bg:customMessageBg><accent+bg:customMessageBg>│</accent+bg:customMessageBg>
<accent+bg:customMessageBg>│</accent+bg:customMessageBg><bg:customMessageBg> </bg:customMessageBg><muted+bg:customMessageBg>↑↓ move · ⏎ insert · esc cancel</muted+bg:customMessageBg><text+bg:customMessageBg>                                          </text+bg:customMessageBg><accent+bg:customMessageBg>│</accent+bg:customMessageBg>
<accent+bg:customMessageBg>╰──────────────────────────────────────────────────────────────────────────╯</accent+bg:customMessageBg>"
`;

exports[`actual host constrains picker to the centered 60% overlay rectangle: 80 terminal constrained picker 1`] = `
"<accent+bg:customMessageBg>╭──────────────────────────────────────────────╮</accent+bg:customMessageBg>
<accent+bg:customMessageBg>│</accent+bg:customMessageBg><bg:customMessageBg> </bg:customMessageBg><accent+bg:customMessageBg+bold>  Find files & folders</accent+bg:customMessageBg+bold><text+bg:customMessageBg>  </text+bg:customMessageBg><muted+bg:customMessageBg>2 matches</muted+bg:customMessageBg><text+bg:customMessageBg>            </text+bg:customMessageBg><accent+bg:customMessageBg>│</accent+bg:customMessageBg>
<accent+bg:customMessageBg>│</accent+bg:customMessageBg><bg:customMessageBg> </bg:customMessageBg><text+bg:customMessageBg>                                             </text+bg:customMessageBg><accent+bg:customMessageBg>│</accent+bg:customMessageBg>
<accent+bg:customMessageBg>│</accent+bg:customMessageBg><bg:customMessageBg> </bg:customMessageBg><accent+bg:customMessageBg>❯</accent+bg:customMessageBg><text+bg:customMessageBg> </text+bg:customMessageBg><muted+bg:customMessageBg>type to filter…</muted+bg:customMessageBg><text+bg:customMessageBg>                            </text+bg:customMessageBg><accent+bg:customMessageBg>│</accent+bg:customMessageBg>
<accent+bg:customMessageBg>│</accent+bg:customMessageBg><bg:customMessageBg> </bg:customMessageBg><text+bg:customMessageBg>                                             </text+bg:customMessageBg><accent+bg:customMessageBg>│</accent+bg:customMessageBg>
<accent+bg:customMessageBg>│</accent+bg:customMessageBg><bg:customMessageBg> </bg:customMessageBg><accent+bg:customMessageBg>›</accent+bg:customMessageBg><text+bg:customMessageBg> </text+bg:customMessageBg><accent+bg:customMessageBg></accent+bg:customMessageBg><text+bg:customMessageBg> </text+bg:customMessageBg><accent+bg:customMessageBg>src/</accent+bg:customMessageBg><text+bg:customMessageBg>                                     </text+bg:customMessageBg><accent+bg:customMessageBg>│</accent+bg:customMessageBg>
<accent+bg:customMessageBg>│</accent+bg:customMessageBg><bg:customMessageBg> </bg:customMessageBg><text+bg:customMessageBg>  </text+bg:customMessageBg><syntaxType+bg:customMessageBg></syntaxType+bg:customMessageBg><text+bg:customMessageBg> </text+bg:customMessageBg><dim+bg:customMessageBg>a.ts</dim+bg:customMessageBg><text+bg:customMessageBg> </text+bg:customMessageBg><muted+bg:customMessageBg>src/</muted+bg:customMessageBg><text+bg:customMessageBg>                                </text+bg:customMessageBg><accent+bg:customMessageBg>│</accent+bg:customMessageBg>
<accent+bg:customMessageBg>│</accent+bg:customMessageBg><bg:customMessageBg> </bg:customMessageBg><text+bg:customMessageBg>                                             </text+bg:customMessageBg><accent+bg:customMessageBg>│</accent+bg:customMessageBg>
<accent+bg:customMessageBg>│</accent+bg:customMessageBg><bg:customMessageBg> </bg:customMessageBg><muted+bg:customMessageBg>↑↓ move · ⏎ insert · esc cancel</muted+bg:customMessageBg><text+bg:customMessageBg>              </text+bg:customMessageBg><accent+bg:customMessageBg>│</accent+bg:customMessageBg>
<accent+bg:customMessageBg>╰──────────────────────────────────────────────╯</accent+bg:customMessageBg>"
`;
